0.0.9-RC - [fix scrollbar]

--- a/src/EmojiCategory/style.scss
+++ b/src/EmojiCategory/style.scss
@@ -11,6 +11,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: flex-start;
+        width: $picker_width;
 
         li.category-name {
             background-color: rgba($picker_bg, .9);
