--- a/src/EmojiList/style.scss
+++ b/src/EmojiList/style.scss
@@ -2,7 +2,7 @@
 
 .emoji-picker {
     .emoji-list {
-        width: $picker_width;
+        width: 100%;
         height: $picker_height;
         overflow-x: hidden;
         box-sizing: border-box;
